<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_white"
    tools:context=".Steps">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/headerToolbar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/calorie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/calories"
                    android:textColor="@color/whiteColor"
                    android:textSize="50sp"
                    tools:ignore="TextContrastCheck" />

            </RelativeLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="true"
                android:rowCount="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:background="@drawable/background_white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/foodCalories"
                            android:layout_width="230dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:hint="@string/hint_food"
                            android:padding="14dp"
                            android:singleLine="true"
                            tools:ignore="TextContrastCheck" />

                        <EditText
                            android:id="@+id/numberCalories"
                            android:layout_width="230dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/caloriesCount"
                            android:inputType="number"
                            android:padding="14dp"
                            android:singleLine="true"
                            tools:ignore="TextContrastCheck" />

                        <Button
                            android:id="@+id/submit"
                            android:layout_width="120dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:text="@string/submit"
                            android:textSize="18sp"
                            android:textColor="@color/whiteColor"
                            android:background="@color/startColor"/>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </GridLayout>

        </LinearLayout>

    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/startColor"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/black"
        app:menu="@menu/menu_nav"
        android:layout_alignParentBottom="true">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>