<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_white"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/headerToolbar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/fitness"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/fitness"
                    android:textColor="@color/whiteColor"
                    android:textSize="50sp"
                    tools:ignore="TextContrastCheck" />

            </RelativeLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="true"
                android:rowCount="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background=""
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@null"
                            android:src="@drawable/wireframe" />

                        <Button
                            android:id="@+id/stepButton"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:backgroundTint="@color/startColor"
                            android:text="@string/steps"
                            android:textColor="@color/whiteColor"
                            android:textSize="18sp"
                            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@null"
                            android:src="@drawable/wireframe" />

                        <Button
                            android:id="@+id/calorieButton"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:backgroundTint="@color/startColor"
                            android:text="@string/calorie"
                            android:textColor="@color/whiteColor"
                            android:textSize="18sp"
                            tools:ignore="TextContrastCheck" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/card_bottom"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textQuote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_white"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/quote_of_the_day"
                    android:textColor="@color/accentColor"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignEnd="@+id/textQuote"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_favorite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textQuote"
                    android:layout_marginTop="10dp"
                    android:text="@string/remember_who_you_re_doing_it_for"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/startColor"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/menu_nav">

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</RelativeLayout>